fix: fix incompatible java 8 code